# oncall-assistant

./: .gitignore  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml
application/: GPTService.py  models.py  urls.py  views.py
oncall_assistant/: asgi.py  settings.py  urls.py  wsgi.py
